GNOME Bugzilla – Bug 702402
user-accounts: Disconnect from ActUserManager signals on dispose
Last modified: 2013-06-17 14:32:29 UTC
See patch.
Created attachment 246968 [details] [review] user-accounts: Disconnect from ActUserManager signals on dispose This causes crashes when e.g. changing the language in the region panel after having opened the user panel first.
Review of attachment 246968 [details] [review]: Looks good.
Attachment 246968 [details] pushed as 1c67d4c - user-accounts: Disconnect from ActUserManager signals on dispose