user-accounts: Disconnect from ActUserManager signals on dispose

This causes crashes when e.g. changing the language in the region
panel after having opened the user panel first.

https://bugzilla.gnome.org/show_bug.cgi?id=702402